src/objects/loan__Product_Amortization_Balance_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Amortization_Frequency__c</fullName>
        <label>Amortization Frequency</label>
        <picklist>
            <controllingField>loan__Balance_Type__c</controllingField>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Type__c</fullName>
        <label>Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Paid Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Calculation_Method__c</fullName>
        <label>Calculation Method</label>
        <picklist>
            <controllingField>loan__Balance_Type__c</controllingField>
            <picklistValues>
                <fullName>Interest Bearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Enabled_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Product__c</fullName>
        <label>Lending Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Product Amortization Balances</relationshipLabel>
        <relationshipName>Product_Amortization_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Amortization Balance</label>
    <nameField>
        <displayFormat>PAB-{00000000}</displayFormat>
        <label>Product Amortization Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Amortization Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>